@@ -1,5 +1,5 @@
 /*
- * $Id: gp_cairo.c,v 1.56 2011/04/28 13:40:58 markisch Exp $
+ * $Id: gp_cairo.c,v 1.57 2011/05/13 19:25:24 markisch Exp $
  */
 
 /* GNUPLOT - gp_cairo.c */
@@ -698,8 +698,10 @@ gchar * gp_cairo_convert(plot_struct *plot, const char* string)
  * the cairo/win32 backend for font rendering.  It has the effect of
  * testing for libfreetype support, and using that instead if possible.
  * Suggested by cairo developer Behdad Esfahbod. 
+ * Allin Cottrell suggests that this not necessary anymore for newer
+ * versions of cairo.
  */
-#ifdef WIN32
+#if defined(WIN32) && (CAIRO_VERSION_MAJOR < 2) && (CAIRO_VERSION_MINOR < 10)
 PangoLayout *
 gp_cairo_create_layout (cairo_t *cr)
 {
